# light-programmer-homekit

./: .gitignore  README.md  pyproject.toml
examples/: config.json
homekit_bridge/: __init__.py  accessory.py  main.py  programmer_client.py
light_programmer_homekit/: __init__.py  accessory.py  main.py  programmer_client.py
