[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "light-programmer-homekit"
version = "0.3.0"
description = "HomeKit bridge for light-programmer — exposes per-light + system reachability as Apple Home Contact Sensors"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Nguyen Ha Dong"}]
dependencies = [
    "HAP-python>=4.9.2",
]

[project.scripts]
light-programmer-homekit = "light_programmer_homekit.main:main"

[tool.setuptools.packages.find]
include = ["light_programmer_homekit*"]
